--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -186,37 +186,37 @@
 
 		<nav class="nav">
 			<div class="nav-item">
-				<span class="nav-item-link">NOTRE SOCIÉTÉ</span>
+				<span class="nav-item-link">{{'title.NOTRE SOCIÉTÉ'|trans}}</span>
 				<div class="nav-item-menu">
 					<div class="nav-item-menu-item">
-						<a href="societe-2.html" class="nav-item-menu-item-link">Qui sommes nous ?</a>
+						<a href="societe-2.html" class="nav-item-menu-item-link">{{'title.Qui sommes nous ?'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="nous-contacter/plan-acces-idgraphique.html" class="nav-item-menu-item-link">Où sommes nous ?</a>
+						<a href="nous-contacter/plan-acces-idgraphique.html" class="nav-item-menu-item-link">{{'title.Où sommes nous ?'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="audit-marketing-gratuit.html" class="nav-item-menu-item-link">Audit en ligne</a>
+						<a href="audit-marketing-gratuit.html" class="nav-item-menu-item-link">{{'title.Audit en ligne'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="https://web.facebook.com/creativ.agence.web" class="nav-item-menu-item-link" target="_blank">Suivez-nous sur Facebook</a>
+						<a href="https://web.facebook.com/creativ.agence.web" class="nav-item-menu-item-link" target="_blank">{{'title.Suivez-nous sur Facebook'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="#" class="nav-item-menu-item-link" target="_blank">Suivez-nous sur Twitter</a>
+						<a href="#" class="nav-item-menu-item-link" target="_blank">{{'title.Suivez-nous sur Instagram'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="societe-2/foire-aux-questions.html" class="nav-item-menu-item-link">Foire aux questions</a>
+						<a href="societe-2/foire-aux-questions.html" class="nav-item-menu-item-link">{{'title.Foire aux questions'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="references/nos-partenaires.html" class="nav-item-menu-item-link">Nos partenaires</a>
+						<a href="references/nos-partenaires.html" class="nav-item-menu-item-link">{{'title.Nos partenaires'|trans}}</a>
 					</div>
 				</div>
 			</div>
 			<div class="nav-item">
-				<a href="references.html" class="nav-item-link ">RÉFÉRENCES</a>
+				<a href="references.html" class="nav-item-link ">{{'title.RÉFÉRENCES'|trans}}</a>
 			</div>
 
 			<div class="nav-item">
-				<a href="nous-contacter.html" class="nav-item-link ">CONTACT</a>
+				<a href="nous-contacter.html" class="nav-item-link ">{{'title.CONTACT'|trans}}</a>
 			</div>
 		</nav>
 
@@ -243,18 +243,18 @@
 					</div>
 				</div>
 				<div class="menu-mobile-sub-menu">
-					<a href="societe-2.html" class="menu-mobile-sub-menu-link">Qui sommes nous ?</a>
-					<a href="nous-contacter/plan-acces-idgraphique.html" class="menu-mobile-sub-menu-link">Où sommes nous ?</a>
-					<a href="audit-marketing-gratuit.html" class="menu-mobile-sub-menu-link">Audit en ligne</a>
-					<a href="https://web.facebook.com/creativ.agence.web" class="menu-mobile-sub-menu-link" target="_blank">Suivez-nous sur Facebook</a>
-					<a href="#" class="menu-mobile-sub-menu-link" target="_blank">Suivez-nous sur Twitter</a>
-					<a href="societe-2/foire-aux-questions.html" class="menu-mobile-sub-menu-link">Foire aux questions</a>
-					<a href="references/nos-partenaires.html" class="menu-mobile-sub-menu-link">Nos partenaires</a>
+					<a href="societe-2.html" class="menu-mobile-sub-menu-link">{{'title.Qui sommes nous ?'|trans}}</a>
+					<a href="nous-contacter/plan-acces-idgraphique.html" class="menu-mobile-sub-menu-link">{{'title.Où sommes nous ?'|trans}}</a>
+					<a href="audit-marketing-gratuit.html" class="menu-mobile-sub-menu-link">{{'title.Où sommes nous ?'|trans}}Audit en ligne</a>
+					<a href="https://web.facebook.com/creativ.agence.web" class="menu-mobile-sub-menu-link" target="_blank">{{'title.Suivez-nous sur Facebook'|trans}}</a>
+					<a href="#" class="menu-mobile-sub-menu-link" target="_blank">{{'title.Suivez-nous sur Instagram'|trans}}</a>
+					<a href="societe-2/foire-aux-questions.html" class="menu-mobile-sub-menu-link">{{'title.Foire aux questions'|trans}}</a>
+					<a href="references/nos-partenaires.html" class="menu-mobile-sub-menu-link">{{'title.Nos partenaires'|trans}}</a>
 				</div>
 			</div>
 			<div class="menu-mobile-sub">
 				<div class="menu-mobile-sub-title">
-					Nos produits
+					{{'title.Nos prestations'|trans}}
 					<div class="menu-mobile-sub-title-icon">
 						<i class="fas fa-plus"></i>
 					</div>
@@ -262,20 +262,15 @@
 				<div class="menu-mobile-sub-menu">
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-							Création
+						{{'title.Création'|trans}}
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">Notre stratégie</a>
-							<a href="" class="menu-item-sub-link">Création de logo</a>
-							<a href="" class="menu-item-sub-link">Charte graphique</a>
-							<a href="" class="menu-item-sub-link">Carte de visite</a>
-							<a href="" class="menu-item-sub-link">Flyer / Dépliant</a>
-							<a href="" class="menu-item-sub-link">Affiche</a>
-							<a href="" class="menu-item-sub-link">Packaging</a>
-
+							<a href="" class="menu-item-sub-link">{{'title.Notre stratégie'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Création de logo'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Charte graphique'|trans}}</a>
 
 						</div>
 					</div>
@@ -287,12 +282,12 @@
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">Site internet</a>
-							<a href="" class="menu-item-sub-link">Site vitrine</a>
-							<a href="" class="menu-item-sub-link">Site catalogue</a>
-							<a href="" class="menu-item-sub-link">Site e-commerce</a>
-							<a href="" class="menu-item-sub-link">Référencement SEO</a>
-							<a href="" class="menu-item-sub-link">Hébergement web</a>
+							<a href="" class="menu-item-sub-link">{{'title.Site internet'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Site vitrine'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Site catalogue'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Site e-commerce'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Référencement SEO'|trans}} </a>
+							<a href="" class="menu-item-sub-link">{{'title.Hébergement web'|trans}}</a>
 						</div>
 					</div>
 					<div class="menu-mobile-sub">
@@ -303,56 +298,50 @@
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">Facturation
-							</a>
-							<a href="" class="menu-item-sub-link">Gestion locative
-							</a>
-							<a href="" class="menu-item-sub-link">ERP</a>
-							<a href="" class="menu-item-sub-link">Caisse
-							</a>
-							<a href="" class="menu-item-sub-link">Gestion commerciale</a>
-							<a href="" class="menu-item-sub-link">CRM</a>
-							<a href="" class="menu-item-sub-link">Gestion de stock</a>
+						
+							<a href="" class="menu-item-sub-link">{{'title.ERP'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Gestion commerciale'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Gestion de stock'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.CRM'|trans}}</a>
 						</div>
 					</div>
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-							Plateforme web
+						{{'title.Plateforme web'|trans}}
+							
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">Immobilier</a>
-							<a href="" class="menu-item-sub-link">Médical et Santé</a>
-							<a href="" class="menu-item-sub-link">hôtellerie et tourisme</a>
-							<a href="" class="menu-item-sub-link">E-learning / Éducation</a>
-							<a href="" class="menu-item-sub-link">Réstaurants / Salons</a>
-							<a href="" class="menu-item-sub-link">Loisirs / Voyages</a>
+							<a href="" class="menu-item-sub-link">{{'title.Immobilier'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.E-learning / Éducation'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Réstaurants / Salons'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Loisirs / Voyages'|trans}}</a>
 						</div>
 					</div>
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-							Marketing web
+							{{'title.Marketing web'|trans}}
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">E-mailing</a>
-							<a href="" class="menu-item-sub-link">Sponsoring réseaux sociaux</a>
-							<a href="" class="menu-item-sub-link">Publicité Google / Youtube</a>
-							<a href="" class="menu-item-sub-link">Gestion des réseaux sociaux</a>
-							<a href="" class="menu-item-sub-link">Mapping / Géolocalisation google</a>
+							<a href="" class="menu-item-sub-link">{{'title.E-mailing'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Sponsoring réseaux sociaux'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Publicité Google / Youtube'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Gestion des réseaux sociaux'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'title.Mapping / Géolocalisation google'|trans}}</a>
 						</div>
 					</div>
 
 
 				</div>
 			</div>
-			<a href="references.html" class="menu-mobile-link">Références</a>
+			<a href="references.html" class="menu-mobile-link">{{'title.Références'|trans}}</a>
 
-			<a href="nous-contacter.html" class="menu-mobile-link">Contact</a>
+			<a href="nous-contacter.html" class="menu-mobile-link">{{'title.Contact'|trans}}</a>
 		</div>
 	</div>
 
@@ -360,64 +349,55 @@
 		<div class="content">
 			<div class="menu-items">
 				<div class="menu-item">
-					<div class="menu-item-link">Création</div>
+					<div class="menu-item-link">{{'title.Création'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-01">
-						<a href="" class="menu-item-sub-link">Notre stratégie</a>
-						<a href="" class="menu-item-sub-link">Création de logo</a>
-						<a href="" class="menu-item-sub-link">Charte graphique</a>
-						<a href="" class="menu-item-sub-link">Carte de visite</a>
-						<a href="" class="menu-item-sub-link">Flyer / Dépliant</a>
-						<a href="" class="menu-item-sub-link">Affiche</a>
-						<a href="" class="menu-item-sub-link">Packaging</a>
+						<a href="" class="menu-item-sub-link">{{'title.Notre stratégie'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Création de logo'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Charte graphique'|trans}}</a>
+					
 					</div>
 				</div>
 				<div class="menu-item">
-					<div class="menu-item-link">Site internet</div>
+					<div class="menu-item-link">{{'title.Site internet'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-08">
-						<a href="" class="menu-item-sub-link">Site internet</a>
-						<a href="" class="menu-item-sub-link">Site vitrine</a>
-						<a href="" class="menu-item-sub-link">Site catalogue</a>
-						<a href="" class="menu-item-sub-link">Site e-commerce</a>
-						<a href="" class="menu-item-sub-link">Référencement SEO</a>
-						<a href="" class="menu-item-sub-link">Hébergement web</a>
+						<a href="" class="menu-item-sub-link">{{'title.Site internet'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Site vitrine'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Site catalogue'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Site e-commerce'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Référencement SEO'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Hébergement web'|trans}}</a>
 					</div>
 				</div>
 
 				<div class="menu-item">
-					<div class="menu-item-link">Logiciel en ligne</div>
+					<div class="menu-item-link">{{'title.Logiciel'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-03">
-						<a href="" class="menu-item-sub-link">Facturation
+						<a href="" class="menu-item-sub-link">{{'title.Facturation'|trans}}
 						</a>
-						<a href="" class="menu-item-sub-link">Gestion locative
-						</a>
-						<a href="" class="menu-item-sub-link">ERP</a>
-						<a href="" class="menu-item-sub-link">Caisse
-						</a>
-						<a href="" class="menu-item-sub-link">Gestion commerciale</a>
-						<a href="" class="menu-item-sub-link">CRM</a>
-						<a href="" class="menu-item-sub-link">Gestion de stock</a>
+						<a href="" class="menu-item-sub-link">{{'title.ERP'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Gestion commerciale'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.CRM'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Gestion de stock'|trans}}</a>
 
 					</div>
 				</div>
 				<div class="menu-item">
-					<div class="menu-item-link">Plateforme web</div>
+					<div class="menu-item-link">{{'title.Plateforme web'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-05">
-						<a href="" class="menu-item-sub-link">Immobilier</a>
-						<a href="" class="menu-item-sub-link">Médical et Santé</a>
-						<a href="" class="menu-item-sub-link">hôtellerie et tourisme</a>
-						<a href="" class="menu-item-sub-link">E-learning / Éducation</a>
-						<a href="" class="menu-item-sub-link">Réstaurants / Salons</a>
-						<a href="" class="menu-item-sub-link">Loisirs / Voyages</a>
+						<a href="" class="menu-item-sub-link">{{'title.Immobilier'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.E-learning / Éducation'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Réstaurants / Salons'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Loisirs / Voyages'|trans}}</a>
 					</div>
 				</div>
 				<div class="menu-item">
 					<div class="menu-item-link">Marketing web</div>
 					<div class="menu-item-sub menu-item-sub-04">
-						<a href="" class="menu-item-sub-link">E-mailing</a>
-						<a href="" class="menu-item-sub-link">Sponsoring réseaux sociaux</a>
-						<a href="" class="menu-item-sub-link">Publicité Google / Youtube</a>
-						<a href="" class="menu-item-sub-link">Gestion des réseaux sociaux</a>
-						<a href="" class="menu-item-sub-link">Mapping / Géolocalisation google</a>
+						<a href="" class="menu-item-sub-link">{{'title.E-mailing'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Sponsoring réseaux sociaux'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Publicité Google / Youtube'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Gestion des réseaux sociaux'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'title.Mapping / Géolocalisation google'|trans}}</a>
 					</div>
 				</div>
 
