--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -243,10 +243,21 @@
 			</a>
 		</div>
 		<div class="header-lang">
+		{{ app.request.locale }}
+		{% if app.request.locale == 'fr' %}
 							<a style="margin-right: 5px;"title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('algeria.svg')}}" width="20px" alt="English"></span></a>
-					<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('france.svg')}}" width="20px" alt="English"></span></a>
-					<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('anglais.svg')}}" width="20px" alt="English"></span></a>
+												<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('anglais.svg')}}" width="20px" alt="English"></span></a>
+		{% endif %}
+		{% if app.request.locale == 'en' %}
+							<a style="margin-right: 5px;"title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('algeria.svg')}}" width="20px" alt="English"></span></a>
+										<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('france.svg')}}" width="20px" alt="English"></span></a>
+		{% endif %}
+			{% if app.request.locale == 'ar' %}
+										<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('france.svg')}}" width="20px" alt="English"></span></a>
 
+																						<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('anglais.svg')}}" width="20px" alt="English"></span></a>
+		{% endif %}
+				
 		</div>
 
 		<div class="header-btn-menu" id="header-btn-menu">
