--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -242,6 +242,9 @@
 				<i class="fab fa-twitter" aria-hidden></i>
 			</a>
 					
+		</div>
+				<div class="header-socials">
+				
 		{% if app.request.locale == 'fr' %}
 							<a style="margin-right: 5px;"title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('algeria.svg')}}" width="20px" alt="English"></span></a>
 							<a style="margin-right: 5px;" title="English" href="https://sarlcreativ.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('anglais.svg')}}" width="20px" alt="English"></span></a>
