--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,6 +28,8 @@
 																																																																																																																																																												    ]
 																																																																																																																																																												}
 		</script>
+		<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v16.0" nonce="1IKKPt94"></script>
 
 		<style>
 			.index-1-bottom-title {
