--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -412,7 +412,16 @@
             <div class="index-5-right-flex">
                 <div class="index-5-right-flex-left">
                     <i class="fas fa-thumbs-up"></i>
-<div class="fb-like" data-href="https://www.facebook.com/creativ.agence.web" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>                    <div><strong>1999</strong> personnes aiment <strong>CREATIV</strong></div>
+
+  <div class="fb-like" 
+       data-href="https://www.facebook.com/creativ.agence.web" 
+       data-width=""
+       data-layout="box_count" 
+       data-action="like" 
+       data-size="large"  
+       data-share="true">
+  </div>
+                    <div><strong>1999</strong> personnes aiment <strong>CREATIV</strong></div>
                 </div>
                 <div class="index-5-right-flex-right">
                     <i class="far fa-check-circle"></i>
