--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -198,37 +198,37 @@
 
 		<nav class="nav">
 			<div class="nav-item">
-				<span class="nav-item-link">{{'title.NOTRE SOCIÉTÉ'|trans}}</span>
+				<span class="nav-item-link">{{'NOTRE SOCIÉTÉ'|trans}}</span>
 				<div class="nav-item-menu">
 					<div class="nav-item-menu-item">
-						<a href="societe-2.html" class="nav-item-menu-item-link">{{'title.Qui sommes nous ?'|trans}}</a>
+						<a href="societe-2.html" class="nav-item-menu-item-link">{{'Qui sommes nous ?'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="nous-contacter/plan-acces-idgraphique.html" class="nav-item-menu-item-link">{{'title.Où sommes nous ?'|trans}}</a>
+						<a href="nous-contacter/plan-acces-idgraphique.html" class="nav-item-menu-item-link">{{'Où sommes nous ?'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="audit-marketing-gratuit.html" class="nav-item-menu-item-link">{{'title.Audit en ligne'|trans}}</a>
+						<a href="audit-marketing-gratuit.html" class="nav-item-menu-item-link">{{'Audit en ligne'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="https://web.facebook.com/creativ.agence.web" class="nav-item-menu-item-link" target="_blank">{{'title.Suivez-nous sur Facebook'|trans}}</a>
+						<a href="https://web.facebook.com/creativ.agence.web" class="nav-item-menu-item-link" target="_blank">{{'Suivez-nous sur Facebook'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="#" class="nav-item-menu-item-link" target="_blank">{{'title.Suivez-nous sur Instagram'|trans}}</a>
+						<a href="#" class="nav-item-menu-item-link" target="_blank">{{'Suivez-nous sur Instagram'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="societe-2/foire-aux-questions.html" class="nav-item-menu-item-link">{{'title.Foire aux questions'|trans}}</a>
+						<a href="societe-2/foire-aux-questions.html" class="nav-item-menu-item-link">{{'Foire aux questions'|trans}}</a>
 					</div>
 					<div class="nav-item-menu-item">
-						<a href="references/nos-partenaires.html" class="nav-item-menu-item-link">{{'title.Nos partenaires'|trans}}</a>
+						<a href="references/nos-partenaires.html" class="nav-item-menu-item-link">{{'Nos partenaires'|trans}}</a>
 					</div>
 				</div>
 			</div>
 			<div class="nav-item">
-				<a href="references.html" class="nav-item-link ">{{'title.RÉFÉRENCES'|trans}}</a>
+				<a href="references.html" class="nav-item-link ">{{'RÉFÉRENCES'|trans}}</a>
 			</div>
 
 			<div class="nav-item">
-				<a href="nous-contacter.html" class="nav-item-link ">{{'title.CONTACT'|trans}}</a>
+				<a href="nous-contacter.html" class="nav-item-link ">{{'CONTACT'|trans}}</a>
 			</div>
 		</nav>
 
@@ -274,18 +274,18 @@
 					</div>
 				</div>
 				<div class="menu-mobile-sub-menu">
-					<a href="societe-2.html" class="menu-mobile-sub-menu-link">{{'title.Qui sommes nous ?'|trans}}</a>
-					<a href="nous-contacter/plan-acces-idgraphique.html" class="menu-mobile-sub-menu-link">{{'title.Où sommes nous ?'|trans}}</a>
-					<a href="audit-marketing-gratuit.html" class="menu-mobile-sub-menu-link">{{'title.Où sommes nous ?'|trans}}Audit en ligne</a>
-					<a href="https://web.facebook.com/creativ.agence.web" class="menu-mobile-sub-menu-link" target="_blank">{{'title.Suivez-nous sur Facebook'|trans}}</a>
-					<a href="#" class="menu-mobile-sub-menu-link" target="_blank">{{'title.Suivez-nous sur Instagram'|trans}}</a>
-					<a href="societe-2/foire-aux-questions.html" class="menu-mobile-sub-menu-link">{{'title.Foire aux questions'|trans}}</a>
-					<a href="references/nos-partenaires.html" class="menu-mobile-sub-menu-link">{{'title.Nos partenaires'|trans}}</a>
+					<a href="societe-2.html" class="menu-mobile-sub-menu-link">{{'Qui sommes nous ?'|trans}}</a>
+					<a href="nous-contacter/plan-acces-idgraphique.html" class="menu-mobile-sub-menu-link">{{'Où sommes nous ?'|trans}}</a>
+					<a href="audit-marketing-gratuit.html" class="menu-mobile-sub-menu-link">{{'Où sommes nous ?'|trans}}Audit en ligne</a>
+					<a href="https://web.facebook.com/creativ.agence.web" class="menu-mobile-sub-menu-link" target="_blank">{{'Suivez-nous sur Facebook'|trans}}</a>
+					<a href="#" class="menu-mobile-sub-menu-link" target="_blank">{{'Suivez-nous sur Instagram'|trans}}</a>
+					<a href="societe-2/foire-aux-questions.html" class="menu-mobile-sub-menu-link">{{'Foire aux questions'|trans}}</a>
+					<a href="references/nos-partenaires.html" class="menu-mobile-sub-menu-link">{{'Nos partenaires'|trans}}</a>
 				</div>
 			</div>
 			<div class="menu-mobile-sub">
 				<div class="menu-mobile-sub-title">
-					{{'title.Nos prestations'|trans}}
+					{{'Nos prestations'|trans}}
 					<div class="menu-mobile-sub-title-icon">
 						<i class="fas fa-plus"></i>
 					</div>
@@ -293,15 +293,15 @@
 				<div class="menu-mobile-sub-menu">
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-						{{'title.Création'|trans}}
+						{{'Création'|trans}}
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">{{'title.Notre stratégie'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Création de logo'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Charte graphique'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Notre stratégie'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Création de logo'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Charte graphique'|trans}}</a>
 
 						</div>
 					</div>
@@ -313,12 +313,12 @@
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">{{'title.Site internet'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Site vitrine'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Site catalogue'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Site e-commerce'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Référencement SEO'|trans}} </a>
-							<a href="" class="menu-item-sub-link">{{'title.Hébergement web'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Site internet'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Site vitrine'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Site catalogue'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Site e-commerce'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Référencement SEO'|trans}} </a>
+							<a href="" class="menu-item-sub-link">{{'Hébergement web'|trans}}</a>
 						</div>
 					</div>
 					<div class="menu-mobile-sub">
@@ -330,49 +330,49 @@
 						</div>
 						<div class="menu-mobile-sub-menu">
 						
-							<a href="" class="menu-item-sub-link">{{'title.ERP'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Gestion commerciale'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Gestion de stock'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.CRM'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'ERP'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Gestion commerciale'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Gestion de stock'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'CRM'|trans}}</a>
 						</div>
 					</div>
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-						{{'title.Plateforme web'|trans}}
+						{{'Plateforme web'|trans}}
 							
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">{{'title.Immobilier'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.E-learning / Éducation'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Réstaurants / Salons'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Loisirs / Voyages'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Immobilier'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'E-learning / Éducation'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Réstaurants / Salons'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Loisirs / Voyages'|trans}}</a>
 						</div>
 					</div>
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-							{{'title.Marketing web'|trans}}
+							{{'Marketing web'|trans}}
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
 						</div>
 						<div class="menu-mobile-sub-menu">
-							<a href="" class="menu-item-sub-link">{{'title.E-mailing'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Sponsoring réseaux sociaux'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Publicité Google / Youtube'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Gestion des réseaux sociaux'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'title.Mapping / Géolocalisation google'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'E-mailing'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Sponsoring réseaux sociaux'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Publicité Google / Youtube'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Gestion des réseaux sociaux'|trans}}</a>
+							<a href="" class="menu-item-sub-link">{{'Mapping / Géolocalisation google'|trans}}</a>
 						</div>
 					</div>
 
 
 				</div>
 			</div>
-			<a href="references.html" class="menu-mobile-link">{{'title.Références'|trans}}</a>
+			<a href="references.html" class="menu-mobile-link">{{'Références'|trans}}</a>
 
-			<a href="nous-contacter.html" class="menu-mobile-link">{{'title.Contact'|trans}}</a>
+			<a href="nous-contacter.html" class="menu-mobile-link">{{'Contact'|trans}}</a>
 		</div>
 	</div>
 
@@ -380,55 +380,55 @@
 		<div class="content">
 			<div class="menu-items">
 				<div class="menu-item">
-					<div class="menu-item-link">{{'title.Création'|trans}}</div>
+					<div class="menu-item-link">{{'Création'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-01">
-						<a href="" class="menu-item-sub-link">{{'title.Notre stratégie'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Création de logo'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Charte graphique'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Notre stratégie'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Création de logo'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Charte graphique'|trans}}</a>
 					
 					</div>
 				</div>
 				<div class="menu-item">
-					<div class="menu-item-link">{{'title.Site internet'|trans}}</div>
+					<div class="menu-item-link">{{'Site internet'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-08">
-						<a href="" class="menu-item-sub-link">{{'title.Site internet'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Site vitrine'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Site catalogue'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Site e-commerce'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Référencement SEO'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Hébergement web'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Site internet'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Site vitrine'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Site catalogue'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Site e-commerce'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Référencement SEO'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Hébergement web'|trans}}</a>
 					</div>
 				</div>
 
 				<div class="menu-item">
-					<div class="menu-item-link">{{'title.Logiciel'|trans}}</div>
+					<div class="menu-item-link">{{'Logiciel'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-03">
-						<a href="" class="menu-item-sub-link">{{'title.Facturation'|trans}}
+						<a href="" class="menu-item-sub-link">{{'Facturation'|trans}}
 						</a>
-						<a href="" class="menu-item-sub-link">{{'title.ERP'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Gestion commerciale'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.CRM'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Gestion de stock'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'ERP'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Gestion commerciale'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'CRM'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Gestion de stock'|trans}}</a>
 
 					</div>
 				</div>
 				<div class="menu-item">
-					<div class="menu-item-link">{{'title.Plateforme web'|trans}}</div>
+					<div class="menu-item-link">{{'Plateforme web'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-05">
-						<a href="" class="menu-item-sub-link">{{'title.Immobilier'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.E-learning / Éducation'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Réstaurants / Salons'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Loisirs / Voyages'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Immobilier'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'E-learning / Éducation'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Réstaurants / Salons'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Loisirs / Voyages'|trans}}</a>
 					</div>
 				</div>
 				<div class="menu-item">
 					<div class="menu-item-link">Marketing web</div>
 					<div class="menu-item-sub menu-item-sub-04">
-						<a href="" class="menu-item-sub-link">{{'title.E-mailing'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Sponsoring réseaux sociaux'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Publicité Google / Youtube'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Gestion des réseaux sociaux'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'title.Mapping / Géolocalisation google'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'E-mailing'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Sponsoring réseaux sociaux'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Publicité Google / Youtube'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Gestion des réseaux sociaux'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Mapping / Géolocalisation google'|trans}}</a>
 					</div>
 				</div>
 
