--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -268,7 +268,7 @@
 		<div class="menu-mobile">
 			<div class="menu-mobile-sub">
 				<div class="menu-mobile-sub-title">
-					Notre société
+					{{'notre'|trans}} {{'Notre société'|trans}}
 					<div class="menu-mobile-sub-title-icon">
 						<i class="fas fa-plus"></i>
 					</div>
@@ -307,7 +307,7 @@
 					</div>
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-							Site internet
+							{{'Site internet'|trans}}
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
@@ -317,7 +317,7 @@
 							<a href="" class="menu-item-sub-link">{{'Site vitrine'|trans}}</a>
 							<a href="" class="menu-item-sub-link">{{'Site catalogue'|trans}}</a>
 							<a href="" class="menu-item-sub-link">{{'Site e-commerce'|trans}}</a>
-							<a href="" class="menu-item-sub-link">{{'Référencement SEO'|trans}} </a>
+							<a href="" class="menu-item-sub-link">{{' Référencement SEO'|trans}} </a>
 							<a href="" class="menu-item-sub-link">{{'Hébergement web'|trans}}</a>
 						</div>
 					</div>
