--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -395,7 +395,7 @@
 						<a href="" class="menu-item-sub-link">{{'Site vitrine'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Site catalogue'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Site e-commerce'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'Référencement SEO'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{'Reférencement SEO'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Hébergement web'|trans}}</a>
 					</div>
 				</div>
