--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,6 +62,25 @@
     color: white !important;
 }
 		</style>
+
+{% if app.request.locale == 'ar' %}
+		<style>
+
+    @media only screen and (min-device-width : 1920px) and (max-device-width : 1920px){
+	.menu-item-link {
+		font-size: 18px;
+	}
+}
+    @media only screen and (min-device-width : 1240px) and (max-device-width : 1366px){
+	.menu-item-link {
+		font-size: 18px;
+	}
+}
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+
+}
+    </style>
+	{% endif %}
 	</head>
 	<body>
 
