--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -64,6 +64,9 @@
 .nav-item:hover .nav-item-menu {
 	margin-top:-30px;
 }
+.nav-item {
+	height:80px;
+}
 		</style>
 
 {% if app.request.locale == 'ar' %}
