--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,7 +71,9 @@
 
 {% if app.request.locale == 'ar' %}
 		<style>
-
+.menu-items {
+	margin-right: 80px;
+}
     @media only screen and (min-device-width : 1920px) and (max-device-width : 1920px){
 	.menu-item-link,.nav-item-link ,.nav-item-menu-item-link,.menu-item-sub-link{
 		font-size: 18px;
